--- a/style.css
+++ b/style.css
@@ -30,4 +30,35 @@ ul {
     flex-direction: column;
     text-align: center;
   }
+}
+
+main .banner {
+  width: 100vw;
+}
+@media (max-width: 800px) {
+  main .banner {
+    display: none;
+  }
+}
+main section {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+@media (max-width: 800px) {
+  main section {
+    flex-direction: column;
+  }
+}
+main .caixa1 {
+  width: 30vw;
+  line-height: 25px;
+  text-align: center;
+}
+@media (max-width: 800px) {
+  main .caixa1 {
+    width: 55vw;
+    margin-top: 30px;
+  }
 }/*# sourceMappingURL=style.css.map */
