--- a/style.scss
+++ b/style.scss
@@ -24,3 +24,30 @@ ul{
         text-align: center;
     }
 }
+main{
+   .banner{
+    width: 100vw;
+    @media(max-width: 800px){
+        display: none;
+    }
+   }
+   section{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 30px;
+    @media(max-width:800px){
+        flex-direction: column;
+    }
+   }
+   .caixa1{
+    width: 30vw;
+    line-height: 25px;
+    text-align: center;
+    @media(max-width:800px){
+        width: 55vw;
+        margin-top: 30px;
+       
+    }
+   }
+}
