--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 }
 body{
     background-color: #EFEEF3;
+    font-family: "Kodchasan", sans-serif;
 }
 header{
     display: flex;
@@ -50,4 +51,7 @@ main{
        
     }
    }
+}
+.subtitulo{
+    margin-bottom: 20px;
 }
